--- a/archives/toutiao-search/2024-02-02.md
+++ b/archives/toutiao-search/2024-02-02.md
@@ -1,47 +1,65 @@
 # 2024-02-02
 
-共 172 条
+共 184 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Feb 02 2024 12:00:45 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Feb 02 2024 13:00:40 GMT+0800 (China Standard Time) -->
 1. [许广高速堵车长达50公里](https://so.toutiao.com/search?keyword=许广高速堵车长达50公里)
-1. [黑利：得州有权脱离美国](https://so.toutiao.com/search?keyword=黑利：得州有权脱离美国)
+1. [新手开山路被别停后对方车下来7人](https://so.toutiao.com/search?keyword=新手开山路被别停后对方车下来7人)
 1. [线下热热闹闹 线上年味浓浓](https://so.toutiao.com/search?keyword=线下热热闹闹+线上年味浓浓)
-1. [高速服务区充电1小时花99元](https://so.toutiao.com/search?keyword=高速服务区充电1小时花99元)
-1. [刘强东老家光明村就业率100%](https://so.toutiao.com/search?keyword=刘强东老家光明村就业率100%)
+1. [黑利：得州有权脱离美国](https://so.toutiao.com/search?keyword=黑利：得州有权脱离美国)
+1. [广州鼓励网约车去机场火车站接单](https://so.toutiao.com/search?keyword=广州鼓励网约车去机场火车站接单)
 1. [韩国瑜当选台新任立法机构负责人](https://so.toutiao.com/search?keyword=韩国瑜当选台新任立法机构负责人)
+1. [暴雪后河南交警“以身试滑”](https://so.toutiao.com/search?keyword=暴雪后河南交警“以身试滑”)
+1. [刘强东老家光明村就业率100%](https://so.toutiao.com/search?keyword=刘强东老家光明村就业率100%)
 1. [学者：韩国瑜江启臣是非常好的搭档](https://so.toutiao.com/search?keyword=学者：韩国瑜江启臣是非常好的搭档)
-1. [贪官全家6人被留置创下湖南省之最](https://so.toutiao.com/search?keyword=贪官全家6人被留置创下湖南省之最)
-1. [警方打掉3个涉黄团伙 扣押视频350G](https://so.toutiao.com/search?keyword=警方打掉3个涉黄团伙+扣押视频350G)
 1. [祝你龙行龘龘前程朤朤生活䲜䲜](https://so.toutiao.com/search?keyword=祝你龙行龘龘前程朤朤生活䲜䲜)
+1. [女子上厕所没纸报警 被拒后投诉遭怼](https://so.toutiao.com/search?keyword=女子上厕所没纸报警+被拒后投诉遭怼)
+1. [胡锡进：上海机场禁网约车运营待商榷](https://so.toutiao.com/search?keyword=胡锡进：上海机场禁网约车运营待商榷)
 1. [咳嗽久了会成肺炎？不实](https://so.toutiao.com/search?keyword=咳嗽久了会成肺炎？不实)
+1. [杨德龙：目前A股市场走势已非理性](https://so.toutiao.com/search?keyword=杨德龙：目前A股市场走势已非理性)
+1. [被撒盐的主家办的剃头酒是什么](https://so.toutiao.com/search?keyword=被撒盐的主家办的剃头酒是什么)
+1. [高速服务区充电1小时花99元](https://so.toutiao.com/search?keyword=高速服务区充电1小时花99元)
+1. [奔驰司机逆行堵路叫嚣 被罚200记3分](https://so.toutiao.com/search?keyword=奔驰司机逆行堵路叫嚣+被罚200记3分)
+1. [警方打掉3个涉黄团伙 扣押视频350G](https://so.toutiao.com/search?keyword=警方打掉3个涉黄团伙+扣押视频350G)
+1. [男子护妻儿致2伤改判正当防卫获国赔](https://so.toutiao.com/search?keyword=男子护妻儿致2伤改判正当防卫获国赔)
+1. [缅甸政府改组 敏昂莱继续担任总理](https://so.toutiao.com/search?keyword=缅甸政府改组+敏昂莱继续担任总理)
+1. [女演员高空表演坠亡 官方成立调查组](https://so.toutiao.com/search?keyword=女演员高空表演坠亡+官方成立调查组)
+1. [男子见义勇为被砍4刀 被救人拒作证](https://so.toutiao.com/search?keyword=男子见义勇为被砍4刀+被救人拒作证)
+1. [养老金结余近6万亿](https://so.toutiao.com/search?keyword=养老金结余近6万亿)
+1. [加塞砸车事件真的反转了吗](https://so.toutiao.com/search?keyword=加塞砸车事件真的反转了吗)
+1. [安徽多地下雪了](https://so.toutiao.com/search?keyword=安徽多地下雪了)
+1. [12306秒光携程却有票 多方释疑](https://so.toutiao.com/search?keyword=12306秒光携程却有票+多方释疑)
+1. [沙利文：美国改变中国的努力没成功](https://so.toutiao.com/search?keyword=沙利文：美国改变中国的努力没成功)
+1. [周鸿祎曾经梦想进演艺圈](https://so.toutiao.com/search?keyword=周鸿祎曾经梦想进演艺圈)
+1. [银行取29万被推销代发工资业务](https://so.toutiao.com/search?keyword=银行取29万被推销代发工资业务)
+1. [水弹枪被认定枪支玩具店主被判缓刑](https://so.toutiao.com/search?keyword=水弹枪被认定枪支玩具店主被判缓刑)
+1. [落马官员家里高档酒装了3辆货车](https://so.toutiao.com/search?keyword=落马官员家里高档酒装了3辆货车)
+1. [沪深北交易所：春节A股休市10天](https://so.toutiao.com/search?keyword=沪深北交易所：春节A股休市10天)
+1. [奥运冠军教练讨薪：奖金一分未得](https://so.toutiao.com/search?keyword=奥运冠军教练讨薪：奖金一分未得)
+1. [俞敏洪称新东方人多 董宇辉灵魂反问](https://so.toutiao.com/search?keyword=俞敏洪称新东方人多+董宇辉灵魂反问)
+1. [若特朗普当选将“助力”台湾回归?](https://so.toutiao.com/search?keyword=若特朗普当选将“助力”台湾回归?)
+1. [两岁男童回老家失踪 被发现坠河身亡](https://so.toutiao.com/search?keyword=两岁男童回老家失踪+被发现坠河身亡)
+1. [山东高速发生严重事故 多车撞损](https://so.toutiao.com/search?keyword=山东高速发生严重事故+多车撞损)
+1. [小米副董事长从北京开SU7去深圳](https://so.toutiao.com/search?keyword=小米副董事长从北京开SU7去深圳)
+1. [周鸿祎用粤语对刘德华说中意你](https://so.toutiao.com/search?keyword=周鸿祎用粤语对刘德华说中意你)
+1. [贪官全家6人被留置创下湖南省之最](https://so.toutiao.com/search?keyword=贪官全家6人被留置创下湖南省之最)
+1. [马英九：支持蔡英文登太平岛](https://so.toutiao.com/search?keyword=马英九：支持蔡英文登太平岛)
+1. [女儿玩爸爸手机发现“出轨录音”](https://so.toutiao.com/search?keyword=女儿玩爸爸手机发现“出轨录音”)
+1. [鼎益丰背后女老板的十三重身份](https://so.toutiao.com/search?keyword=鼎益丰背后女老板的十三重身份)
+1. [董宇辉四字总结自己：不过如此](https://so.toutiao.com/search?keyword=董宇辉四字总结自己：不过如此)
+1. [攻击嗓子的新病毒来了吗](https://so.toutiao.com/search?keyword=攻击嗓子的新病毒来了吗)
+1. [午评：创业板指跌近2%续创调整新低](https://so.toutiao.com/search?keyword=午评：创业板指跌近2%续创调整新低)
+1. [法国试行浓缩工时版4天工作制](https://so.toutiao.com/search?keyword=法国试行浓缩工时版4天工作制)
+1. [胖东来一件羽绒服仅赚3毛钱](https://so.toutiao.com/search?keyword=胖东来一件羽绒服仅赚3毛钱)
+1. [菲律宾或正进行仁爱礁坐滩军舰补给](https://so.toutiao.com/search?keyword=菲律宾或正进行仁爱礁坐滩军舰补给)
+1. [柯文哲批民进党满嘴谎言](https://so.toutiao.com/search?keyword=柯文哲批民进党满嘴谎言)
 1. [韩国瑜江启臣当选后拜访王金平](https://so.toutiao.com/search?keyword=韩国瑜江启臣当选后拜访王金平)
 1. [脱口秀演员杨波回应](https://so.toutiao.com/search?keyword=脱口秀演员杨波回应)
-1. [女子上厕所没纸报警 被拒后投诉遭怼](https://so.toutiao.com/search?keyword=女子上厕所没纸报警+被拒后投诉遭怼)
 1. [央媒评村民办酒席被撒盐：简单粗暴](https://so.toutiao.com/search?keyword=央媒评村民办酒席被撒盐：简单粗暴)
-1. [奔驰司机逆行堵路叫嚣 被罚200记3分](https://so.toutiao.com/search?keyword=奔驰司机逆行堵路叫嚣+被罚200记3分)
-1. [男子见义勇为被砍4刀 被救人拒作证](https://so.toutiao.com/search?keyword=男子见义勇为被砍4刀+被救人拒作证)
-1. [被撒盐的主家办的剃头酒是什么](https://so.toutiao.com/search?keyword=被撒盐的主家办的剃头酒是什么)
-1. [养老金结余近6万亿](https://so.toutiao.com/search?keyword=养老金结余近6万亿)
 1. [湖人6人得分上双擒凯尔特人](https://so.toutiao.com/search?keyword=湖人6人得分上双擒凯尔特人)
-1. [女演员高空表演坠亡 官方成立调查组](https://so.toutiao.com/search?keyword=女演员高空表演坠亡+官方成立调查组)
-1. [落马官员家里高档酒装了3辆货车](https://so.toutiao.com/search?keyword=落马官员家里高档酒装了3辆货车)
-1. [男子护妻儿致2伤改判正当防卫获国赔](https://so.toutiao.com/search?keyword=男子护妻儿致2伤改判正当防卫获国赔)
-1. [水弹枪被认定枪支玩具店主被判缓刑](https://so.toutiao.com/search?keyword=水弹枪被认定枪支玩具店主被判缓刑)
-1. [银行取29万被推销代发工资业务](https://so.toutiao.com/search?keyword=银行取29万被推销代发工资业务)
 1. [专家：提振股市暂停IPO很有必要](https://so.toutiao.com/search?keyword=专家：提振股市暂停IPO很有必要)
-1. [杨德龙：目前A股市场走势已非理性](https://so.toutiao.com/search?keyword=杨德龙：目前A股市场走势已非理性)
-1. [两岁男童回老家失踪 被发现坠河身亡](https://so.toutiao.com/search?keyword=两岁男童回老家失踪+被发现坠河身亡)
-1. [暴雪后河南交警“以身试滑”](https://so.toutiao.com/search?keyword=暴雪后河南交警“以身试滑”)
-1. [俞敏洪称新东方人多 董宇辉灵魂反问](https://so.toutiao.com/search?keyword=俞敏洪称新东方人多+董宇辉灵魂反问)
-1. [奥运冠军教练讨薪：奖金一分未得](https://so.toutiao.com/search?keyword=奥运冠军教练讨薪：奖金一分未得)
-1. [沪深北交易所：春节A股休市10天](https://so.toutiao.com/search?keyword=沪深北交易所：春节A股休市10天)
-1. [菲律宾或正进行仁爱礁坐滩军舰补给](https://so.toutiao.com/search?keyword=菲律宾或正进行仁爱礁坐滩军舰补给)
-1. [沙利文：美国改变中国的努力没成功](https://so.toutiao.com/search?keyword=沙利文：美国改变中国的努力没成功)
-1. [山东高速发生严重事故 多车撞损](https://so.toutiao.com/search?keyword=山东高速发生严重事故+多车撞损)
-1. [若特朗普当选将“助力”台湾回归?](https://so.toutiao.com/search?keyword=若特朗普当选将“助力”台湾回归?)
 1. [走失40年的四川男子回家了](https://so.toutiao.com/search?keyword=走失40年的四川男子回家了)
-1. [董宇辉四字总结自己：不过如此](https://so.toutiao.com/search?keyword=董宇辉四字总结自己：不过如此)
 1. [俄已确认伊尔-76坠毁事件死者身份](https://so.toutiao.com/search?keyword=俄已确认伊尔-76坠毁事件死者身份)
 1. [小萨无缘130万美元奖金](https://so.toutiao.com/search?keyword=小萨无缘130万美元奖金)
 1. [小区1个月4户被盗 盗贼15秒开锁](https://so.toutiao.com/search?keyword=小区1个月4户被盗+盗贼15秒开锁)
@@ -51,25 +69,19 @@
 1. [荣立三等功的丈夫捧着鲜花走进教室](https://so.toutiao.com/search?keyword=荣立三等功的丈夫捧着鲜花走进教室)
 1. [黄晓明担任影协副主席被质疑](https://so.toutiao.com/search?keyword=黄晓明担任影协副主席被质疑)
 1. [孤老临终前赠房产却遭其他兄妹争夺](https://so.toutiao.com/search?keyword=孤老临终前赠房产却遭其他兄妹争夺)
-1. [女儿玩爸爸手机发现“出轨录音”](https://so.toutiao.com/search?keyword=女儿玩爸爸手机发现“出轨录音”)
-1. [安徽多地下雪了](https://so.toutiao.com/search?keyword=安徽多地下雪了)
-1. [攻击嗓子的新病毒来了吗](https://so.toutiao.com/search?keyword=攻击嗓子的新病毒来了吗)
 1. [赛鸽被印度当“中国间谍”关8个月](https://so.toutiao.com/search?keyword=赛鸽被印度当“中国间谍”关8个月)
 1. [三卡车哈尔滨的雪已运抵广州](https://so.toutiao.com/search?keyword=三卡车哈尔滨的雪已运抵广州)
 1. [本赛季拥有两名全明星球队一览](https://so.toutiao.com/search?keyword=本赛季拥有两名全明星球队一览)
 1. [特雷·杨落选NBA全明星](https://so.toutiao.com/search?keyword=特雷·杨落选NBA全明星)
 1. [只招到四个孩子的民办学校发声](https://so.toutiao.com/search?keyword=只招到四个孩子的民办学校发声)
 1. [韩国瑜：期待“立院”不再暴力](https://so.toutiao.com/search?keyword=韩国瑜：期待“立院”不再暴力)
-1. [鼎益丰背后女老板的十三重身份](https://so.toutiao.com/search?keyword=鼎益丰背后女老板的十三重身份)
 1. [马克西生涯首进全明星](https://so.toutiao.com/search?keyword=马克西生涯首进全明星)
-1. [小米副董事长从北京开SU7去深圳](https://so.toutiao.com/search?keyword=小米副董事长从北京开SU7去深圳)
 1. [网友热议《大江大河3》大结局](https://so.toutiao.com/search?keyword=网友热议《大江大河3》大结局)
 1. [乌无人艇夜间突袭俄导弹艇画面曝光](https://so.toutiao.com/search?keyword=乌无人艇夜间突袭俄导弹艇画面曝光)
 1. [意大利将派军舰在红海护航1年](https://so.toutiao.com/search?keyword=意大利将派军舰在红海护航1年)
 1. [财政政策推动高质量发展](https://so.toutiao.com/search?keyword=财政政策推动高质量发展)
 1. [男子开车回家过年因大雪被困高速](https://so.toutiao.com/search?keyword=男子开车回家过年因大雪被困高速)
 1. [乱港艺人王宗尧暴动罪名成立](https://so.toutiao.com/search?keyword=乱港艺人王宗尧暴动罪名成立)
-1. [胖东来一件羽绒服仅赚3毛钱](https://so.toutiao.com/search?keyword=胖东来一件羽绒服仅赚3毛钱)
 1. [农村手艺人为清代老宅画门神写对联](https://so.toutiao.com/search?keyword=农村手艺人为清代老宅画门神写对联)
 1. [16年来最强春运雨雪启动](https://so.toutiao.com/search?keyword=16年来最强春运雨雪启动)
 1. [风云四号03批气象卫星启动研制](https://so.toutiao.com/search?keyword=风云四号03批气象卫星启动研制)
